# rkuvc

./: CMakeLists.txt  LICENSE  main.c  readme.md
bsp/: dragonfly-usb-c.dtsi  dragonfly.dts
rk3588/: usb_config.sh
uvc/: rkuvc.h  uevent.c  uvc-gadget.c  uvc-gadget.h  uvc_app.c  uvc_app.h  uvc_control.c  uvc_control.h  uvc_device_monitor.c  uvc_device_monitor.h  uvc_encode.cpp  uvc_encode.h  uvc_epoll.c  uvc_epoll.h  uvc_event.c  uvc_event.h  uvc_gadget_internal.h  uvc_gadget_run.c  uvc_monitor_parse.c  uvc_monitor_parse.h  uvc_session.c  uvc_session.h  uvc_video.cpp  uvc_video.h
